--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -30,12 +30,14 @@
 	          android:layout_height="wrap_content"
 	          android:padding="10dip"         
 	          android:layout_below="@id/header">
-	        <!-- EMAIL LOGIN -->
+	      
 	        <TextView android:layout_width="fill_parent"
 	            	android:layout_height="wrap_content"
 	            	android:layout_marginBottom="30dip"
+	            	android:textSize="30sp"
 	            	android:text="@string/Welcome"
 	            />
+	        <!-- EMAIL LOGIN 
 	        <EditText android:layout_width="fill_parent"
 	            android:layout_height="wrap_content"
 	            android:layout_marginTop="5dip"
@@ -50,12 +52,14 @@
 	            android:hint="@string/password_hint"
 	       		android:password="true"
 	            />
-	        <Button android:id="@+id/btnLogin"
-	            android:layout_width="fill_parent"
-	            android:layout_height="wrap_content"
-	            android:text="@string/login"
-	        	android:layout_marginBottom="10dip"
-	        />
+	            -->
+	            <com.facebook.widget.LoginButton
+        		android:id="@+id/authButton"
+        		android:layout_width="wrap_content"
+       			android:layout_height="wrap_content"
+       		 	android:layout_gravity="center_horizontal"
+       			android:layout_marginTop="30dp"
+       			/>
 	        
 	        <Button android:id="@+id/btnViewNoLogin"
 	            android:layout_width="fill_parent"
