--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
 	        <TextView android:layout_width="fill_parent"
 	            	android:layout_height="wrap_content"
 	            	android:layout_marginBottom="30dip"
-	            	android:textSize="30sp"
+	            	android:textSize="25sp"
 	            	android:text="@string/Welcome"
 	            />
 	        <!-- EMAIL LOGIN 
@@ -59,6 +59,7 @@
        			android:layout_height="wrap_content"
        		 	android:layout_gravity="center_horizontal"
        			android:layout_marginTop="30dp"
+       			android:layout_marginBottom="25dip"
        			/>
 	        
 	        <Button android:id="@+id/btnViewNoLogin"
