Edit with merged code: main app with working augumentation for a single target. Andys updated FB is, I believe working. The retrieval from amazon cloud is not working yet so for it to work fully add a bitmap to your root folder on the sd card of your phone named UCSBhat.bmp

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="black_overlay">#66000000</color>
     <color name="ucsb_blue">#006CE3</color>
     <color name="ucsb_gold">#F2B93A</color>
+    <color name="semi_transparent_black">#C8000000</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
