--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -34,5 +34,11 @@
         <item name="buttonBarStyle">@style/ButtonBar</item>
         <item name="buttonBarButtonStyle">@style/ButtonBarButton</item>
     </style>
+    
+    <style name="CloudRecoTheme" parent="@android:style/Theme.NoTitleBar.Fullscreen">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+    
 
 </resources>
