--- a/res/layout/activity_camera_view.xml
+++ b/res/layout/activity_camera_view.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>    
-<android.view.SurfaceView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    
+    >
+    <android.view.SurfaceView 
     	android:id="@+id/surface_camera"
         android:layout_width="fill_parent" 
         android:layout_height="fill_parent" 
         >
-    
-</android.view.SurfaceView>
+    </android.view.SurfaceView>
+
+
+
+</RelativeLayout>
