--- a/res/layout/camera_overlay.xml
+++ b/res/layout/camera_overlay.xml
@@ -22,6 +22,14 @@
     </RelativeLayout>
     
     <Button
+        android:id="@+id/post_to_fb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="@string/post" />
+    
+    <Button
         android:id="@+id/overlay_close_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
