--- a/res/layout/camera_overlay.xml
+++ b/res/layout/camera_overlay.xml
@@ -38,6 +38,22 @@
         android:background="@drawable/close_button_background"
         android:visibility="gone" />
 
+    <Button
+        android:id="@+id/gallery_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerInParent = "true"
+        android:visibility="visible" />
+    
+    <Button
+        android:id="@+id/gallery_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent = "true"
+        android:visibility="visible" />    
+    
     <TextView
         android:id="@+id/overlay_status"
         android:layout_width="wrap_content"
