added six Ui buttons to camera view page Different effects when buttons are pressed.

--- a/res/layout/camera_overlay.xml
+++ b/res/layout/camera_overlay.xml
@@ -27,7 +27,31 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:text="@string/post" />
+        android:background="@drawable/share_button_background"/>
+
+    <Button
+        android:id="@+id/create_augmentation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/createaug_button_background"/>
+    
+    <Button
+        android:id="@+id/help"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/help_button_background"/>
+    
+    <Button
+        android:id="@+id/logout_facebook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/logout_button_background"/>
     
     <Button
         android:id="@+id/overlay_close_button"
@@ -44,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerInParent = "true"
+        android:background="@drawable/gallery_left_background"
         android:visibility="visible" />
     
     <Button
@@ -52,7 +77,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerInParent = "true"
-        android:visibility="visible" />    
+        android:background="@drawable/gallery_right_background"
+        android:visibility="visible" />      
     
     <TextView
         android:id="@+id/overlay_status"
