Commented out the intent part which is causing errors. re-positioned the input textField

--- a/res/layout/create_augmentation.xml
+++ b/res/layout/create_augmentation.xml
@@ -24,8 +24,8 @@
     	android:id="@+id/augmentation_text"
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
+    	android:layout_alignParentTop="true"
         android:layout_centerVertical="true"
-    	android:hint="@string/augmentation_hint"
     	android:inputType="text" />
 	
 	
