--- a/res/layout/camera_overlay.xml
+++ b/res/layout/camera_overlay.xml
@@ -69,7 +69,7 @@
         android:layout_alignParentLeft="true"
         android:layout_centerInParent = "true"
         android:background="@drawable/gallery_left_background"
-        android:visibility="visible" />
+        android:visibility="invisible" />
     
     <Button
         android:id="@+id/gallery_right"
@@ -78,7 +78,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerInParent = "true"
         android:background="@drawable/gallery_right_background"
-        android:visibility="visible" />      
+        android:visibility="invisible" />      
     
     <TextView
         android:id="@+id/overlay_status"
