--- a/res/drawable/createaug_button_background.xml
+++ b/res/drawable/createaug_button_background.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     
     <item android:drawable="@drawable/aug_pressed" android:state_pressed="true"/>
-    <item android:drawable="@drawable/aug_icon"/>
+    <item android:drawable="@drawable/aug_na"/>
 
 </selector>
