--- a/res/layout/create_augmentation.xml
+++ b/res/layout/create_augmentation.xml
@@ -18,7 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true" 
+            android:visibility="gone"/>
 	
 	<EditText
     	android:id="@+id/augmentation_text"
