--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="ucsb_gold">#F2B93A</color>
     <color name="semi_transparent_black">#C8000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="transparent">#80000000</color>
 
 </resources>
