--- a/res/layout/camera_overlay.xml
+++ b/res/layout/camera_overlay.xml
@@ -38,11 +38,19 @@
         android:background="@drawable/createaug_button_background"/>
     
     <Button
+        android:id="@+id/facebookLike"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Like"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
+    
+    <Button
         android:id="@+id/help"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/help_button_background"/>
     
     <Button
@@ -52,6 +60,17 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:background="@drawable/logout_button_background"/>
+    
+    
+    <CheckedTextView
+        android:id="@+id/indexes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/facebookLike"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:text="0/0" />
+    
     
     <Button
         android:id="@+id/overlay_close_button"
@@ -66,36 +85,18 @@
         android:id="@+id/gallery_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/indexes"
         android:layout_alignParentLeft="true"
-        android:layout_centerInParent = "true"
         android:background="@drawable/gallery_left_background"
-        android:visibility="invisible" />
-    
+        android:visibility="visible" />
+
     <Button
         android:id="@+id/gallery_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/indexes"
         android:layout_alignParentRight="true"
-        android:layout_centerInParent = "true"
         android:background="@drawable/gallery_right_background"
-        android:visibility="invisible" />      
-    
-    <TextView
-        android:id="@+id/overlay_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="70dp"
-        android:background="@color/semi_transparent_black"
-        android:gravity="center"
-        android:paddingBottom="10dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:paddingTop="10dp"
-        android:text="@string/status_bar_scanning"
-        android:textColor="@color/white"
-        android:textSize="@dimen/overlay_status"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </RelativeLayout>
