new ICON, new Button. Displaying augmentation infos

--- a/res/layout-land/camera_overlay.xml
+++ b/res/layout-land/camera_overlay.xml
@@ -54,7 +54,7 @@
         android:layout_alignBottom="@+id/indexes"
         android:layout_toRightOf="@+id/indexes"
         android:background="@drawable/gallery_right_background"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/gallery_left"
@@ -63,15 +63,15 @@
         android:layout_alignBottom="@+id/indexes"
         android:layout_toLeftOf="@+id/indexes"
         android:background="@drawable/gallery_left_background"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
-    <CheckedTextView
+    <TextView
         android:id="@+id/indexes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="0/0" />
+        android:text="@+string/indexes" />
 
     
     <Button
@@ -80,7 +80,9 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/create_augmentation"
         android:layout_alignParentRight="true"
-        android:text="Like" />
+        android:text="Like" 
+        android:visibility="invisible"
+        />
 
     <Button
         android:id="@+id/help"
@@ -90,6 +92,22 @@
         android:layout_alignParentTop="true"
         android:background="@drawable/help_button_background" />
 
+     <TextView
+        android:id="@+id/numLikes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="@+string/numLikes" />
+     
+     <TextView
+        android:id="@+id/createrInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/numLikes"
+        android:layout_centerHorizontal="true"
+        android:text="@+string/createrInfo" />
+    
     <Button
         android:id="@+id/post_to_fb"
         android:layout_width="wrap_content"
