--- a/res/layout-land/camera_overlay.xml
+++ b/res/layout-land/camera_overlay.xml
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/create_augmentation"
         android:layout_alignParentRight="true"
-        android:text="Like" 
+        android:text="@+string/facebookLike" 
         android:visibility="invisible"
         />
 
