--- a/res/layout/create_augmentation.xml
+++ b/res/layout/create_augmentation.xml
@@ -12,6 +12,14 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:background="@drawable/augdone_button_background"/>
+    
+	<Button
+        android:id="@+id/create_augmentation_toggle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/augdone_button_background"/>
 
 	<ProgressBar
             style="@android:attr/progressBarStyleLarge"
