--- a/res/layout/create_augmentation.xml
+++ b/res/layout/create_augmentation.xml
@@ -4,22 +4,29 @@
     android:layout_height="match_parent" >
         
 
-    
-    <Button
+     <Button
         android:id="@+id/create_augmentation_done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/augdone_button_background"/>
     
+    <Button
+        android:id="@+id/create_augmentation_freehand"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/freehand_button_background"/>
+    
 	<Button
-        android:id="@+id/create_augmentation_toggle"
+        android:id="@+id/create_augmentation_textmode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:background="@drawable/augdone_button_background"/>
+        android:background="@drawable/textmode_button_background"/>
 
 	<ProgressBar
             style="@android:attr/progressBarStyleLarge"
