--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="semi_transparent_black">#C8000000</color>
     <color name="white">#FFFFFF</color>
     <color name="transparent">#80000000</color>
+    <color name="black">#000000</color>
 
 </resources>
