--- a/res/drawable/share_button_background.xml
+++ b/res/drawable/share_button_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     
-    <item android:drawable="@drawable/share_pressed" android:state_pressed="true"/>
-    <item android:drawable="@drawable/share_icon"/>
+    <item android:drawable="@drawable/fb_button" android:state_pressed="true"/>
+    <item android:drawable="@drawable/fb_button"/>
 
 </selector>
