--- a/res/drawable/createaug_button_background.xml
+++ b/res/drawable/createaug_button_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     
-    <item android:drawable="@drawable/aug_pressed" android:state_pressed="true"/>
-    <item android:drawable="@drawable/aug_button"/>
+    <item android:drawable="@drawable/create_normal" android:state_pressed="true"/>
+    <item android:drawable="@drawable/create_normal"/>
 
 </selector>
