--- a/res/drawable/gallery_left_background.xml
+++ b/res/drawable/gallery_left_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
 	
-    <item android:drawable="@drawable/leftarrow_pressed" android:state_pressed="true"/>
-    <item android:drawable="@drawable/leftarrow_icon"/>
+    <item android:drawable="@drawable/left_arrow_normal" android:state_pressed="true"/>
+    <item android:drawable="@drawable/left_arrow_normal"/>
 
 </selector>
