--- a/res/layout-land/camera_overlay.xml
+++ b/res/layout-land/camera_overlay.xml
@@ -29,14 +29,6 @@
         android:layout_alignParentRight="true"
         android:background="@drawable/createaug_button_background"/>
     
-    <Button
-        android:id="@+id/logout_facebook"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/logout_button_background"/>
-    
     
     <Button
         android:id="@+id/overlay_close_button"
@@ -85,35 +77,7 @@
         android:text="@+string/facebookLike" 
         android:visibility="invisible"
         />
-
-    <Button
-        android:id="@+id/help"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/help_button_background" />
-
-     <TextView
-        android:id="@+id/numLikes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="@+string/numLikes" 
-        android:textColor="@color/ucsb_gold"
-        />
-     
-     <TextView
-        android:id="@+id/createrInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/numLikes"
-        android:layout_centerHorizontal="true"
-        android:text="@+string/createrInfo" 
-        android:textColor="@color/ucsb_gold"
-        />
-    
+	     
     <Button
         android:id="@+id/post_to_fb"
         android:layout_width="wrap_content"
@@ -121,5 +85,50 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:background="@drawable/share_button_background" />
+
+    <Button
+        android:id="@+id/help"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/help_button_background" />
+
+    <Button
+        android:id="@+id/logout_facebook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/post_to_fb"
+        android:background="@drawable/logout_button_background" />
+    
+    <RelativeLayout
+        android:id="@+id/augmentation_info_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/aug_info_bar"
+        android:visibility="invisible" >
+
+        <TextView
+            android:id="@+id/numLikes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="@+string/numLikes"
+            android:textColor="@color/ucsb_gold" />
+
+        <TextView
+            android:id="@+id/createrInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/numLikes"
+            android:layout_centerHorizontal="true"
+            android:text="@+string/createrInfo"
+            android:textColor="@color/ucsb_gold" />
+    </RelativeLayout>
+
 
 </RelativeLayout>
