--- a/res/layout/share_fb.xml
+++ b/res/layout/share_fb.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/share_fb_container"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/message"
-            android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="0.62"
-            android:ems="10"
-            android:hint="@string/share_hint"
-            android:inputType="textMultiLine" >
-
-		</EditText>
+	<LinearLayout
+	    android:id="@+id/share_fb_container"
+	    android:layout_width="match_parent"
+	    android:layout_height="198dp"
+	    android:orientation="vertical" 
+	    android:clickable="true"
+	    android:focusable="true"
+	    android:focusableInTouchMode="true">
 	
-        
-
-</LinearLayout>
+	        <EditText
+	            android:id="@+id/message"
+	            android:layout_width="match_parent"
+	            android:layout_height="0dip"
+	            android:layout_weight="0.62"
+	            android:ems="10"
+	            android:hint="@string/share_hint"
+	            >
+			</EditText>
+			<Button 
+			    android:id="@+id/done_edit"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:text="@string/post"/>
+	        
+	
+	</LinearLayout>
+</ScrollView>
