Code now works with augmentation review. However there is still one error in that the code doesn't seem to want to render 460*800 images (this happens regardless of the code I added). Also added code to upload to vuforia. Everything is now integrated with the augmentation creation and augmentation and target upload except for the error I mentioned and a couple little add ins.

--- a/res/layout/camera_overlay.xml
+++ b/res/layout/camera_overlay.xml
@@ -123,4 +123,31 @@
         android:background="@drawable/close_button_background"
         android:visibility="gone" />
 
+    <Button
+        android:id="@+id/cancel_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="Cancel" 
+        android:visibility="invisible"/>
+
+    <Button
+        android:id="@+id/share_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/share_button_background" 
+        android:visibility="invisible"/>
+
+    <Button
+        android:id="@+id/done_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/augdone_button_background" 
+        android:visibility="invisible"/>
+
 </RelativeLayout>
