--- a/res/drawable/freehand_button_background.xml
+++ b/res/drawable/freehand_button_background.xml
@@ -2,7 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     
     <item android:drawable="@drawable/freehand_pressed" android:state_pressed="true"/>
-    <item android:drawable="@drawable/freehand_na" android:state_enabled="true"/>
-    <item android:drawable="@drawable/freehand_icon"/>
+    <item android:drawable="@drawable/freehand_normal"/>
 
 </selector>
