--- a/res/layout/camera_overlay.xml
+++ b/res/layout/camera_overlay.xml
@@ -129,7 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Cancel" 
+        android:background="@drawable/cancel_button_background"
         android:visibility="invisible"/>
 
     <Button
